--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -21,7 +21,7 @@
             <h3>سبد خرید</h3>
             <div class="products">
               <div class="product">
-                <a class="special" href="">
+                <a href="">
                   <div class="image">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -42,7 +42,7 @@
                 </a>
               </div>
               <div class="product">
-                <a class="special" href="">
+                <a href="">
                   <div class="image">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -63,7 +63,7 @@
                 </a>
               </div>
               <div class="product">
-                <a class="special" href="">
+                <a href="">
                   <div class="image">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -84,7 +84,7 @@
                 </a>
               </div>
               <div class="product">
-                <a class="special" href="">
+                <a href="">
                   <div class="image">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -105,7 +105,7 @@
                 </a>
               </div>
               <div class="product">
-                <a class="special" href="">
+                <a href="">
                   <div class="image">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
