--- a/views/includes/products-list.ejs
+++ b/views/includes/products-list.ejs
@@ -5,7 +5,7 @@
       <% products.map(product => { %>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="/product/<%= product.product_code %>">
+          <a href="/product/<%= product.product_code %>">
             <div class="row-1">
               <img src="<%= product.image %>" alt="" />
             </div>
