--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
                 class="swiper-slide"
                 style="background-color: <%= category.boxColor %>"
               >
-                <a href="/products?category=<%= category.name %>">
+                <a class="special" href="/products?category=<%= category.name %>">
                   <img src="<%= category.image %>" alt="" />
                   <div class="details">
                     <h5><%= category.name_fa %></h5>
