--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -24,7 +24,7 @@
           <div class="products">
             <% products.map(product => { %>
             <div class="product">
-              <a class="special" href="/product/<%= product.product_code %>">
+              <a href="/product/<%= product.product_code %>">
                 <div class="image">
                   <img src="<%= product.image %>" alt="" />
                 </div>
