--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <div class="side-right">
     <div class="brand">
-      <a class="special" href="/">
+      <a href="/">
         <img src="/assets/icons/brand.png" alt="" />
         <span class="vertical-line"></span>
         <h1>وبسایت فروشگاهی</h1>
