--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -6,7 +6,7 @@
       </button>
     </div>
     <div class="brand">
-      <a class="special" href="/">
+      <a href="/">
         <img src="/assets/icons/brand.png" alt="" />
         <h1>وبسایت فروشگاهی</h1>
       </a>
@@ -27,56 +27,56 @@
           </button>
         </form>
         <% if (recentSearches) { %>
-          <div class="recent-searches">
-            <h6>جستجو های اخیر شما</h6>
-            <div class="searches">
-              <ul>
-                <% recentSearches.map(recentSearch => { %>
-                  <li>
-                    <a href="/search?q=<%= recentSearch.query %>">
-                      <img src="/assets/icons/recent.svg" alt="" />
-                      <span><%= recentSearch.query %></span>
-                    </a>
-                  </li>
-                <% }); %>
-              </ul>
-            </div>
+        <div class="recent-searches">
+          <h6>جستجو های اخیر شما</h6>
+          <div class="searches">
+            <ul>
+              <% recentSearches.map(recentSearch => { %>
+              <li>
+                <a href="/search?q=<%= recentSearch.query %>">
+                  <img src="/assets/icons/recent.svg" alt="" />
+                  <span><%= recentSearch.query %></span>
+                </a>
+              </li>
+              <% }); %>
+            </ul>
           </div>
+        </div>
         <% } %>
       </div>
     </div>
     <div class="user-actions">
       <div class="action-links">
-        <a class="action-link" href="/favorites">
+        <a class="action-link special" href="/favorites">
           <img src="/assets/icons/heart.svg" alt="" />
         </a>
-        <a class="action-link" href="/cart">
+        <a class="action-link special" href="/cart">
           <img src="/assets/icons/cart.svg" alt="" />
         </a>
       </div>
       <span class="vertical-line"></span>
       <% if(!login_state) { %>
-        <div class="auth-links">
-          <a class="auth-link" href="/auth/register">ثبت نام</a>
-          <a class="auth-link" href="/auth/login">ورود</a>
-        </div>
+      <div class="auth-links">
+        <a class="special auth-link" href="/auth/register">ثبت نام</a>
+        <a class="special auth-link" href="/auth/login">ورود</a>
+      </div>
       <% } else { %>
-        <div class="user-data">
-          <button id="open-user-data-box-btn">
+      <div class="user-data">
+        <button id="open-user-data-box-btn">
+          <img src="/assets/icons/person.svg" alt="" />
+          <img src="/assets/icons/caret.svg" alt="" />
+        </button>
+        <div class="user-data-box">
+          <div class="name">
             <img src="/assets/icons/person.svg" alt="" />
-            <img src="/assets/icons/caret.svg" alt="" />
-          </button>
-          <div class="user-data-box">
-            <div class="name">
-              <img src="/assets/icons/person.svg" alt="" />
-              <span><%= user.first_name %></span>
-            </div>
-            <button id="exit-from-account-btn">
-              <img src="/assets/icons/exit.svg" alt="" />
-              <span>خروج</span>
-            </button>
+            <span><%= user.first_name %></span>
           </div>
+          <button id="exit-from-account-btn">
+            <img src="/assets/icons/exit.svg" alt="" />
+            <span>خروج</span>
+          </button>
         </div>
+      </div>
       <% } %>
     </div>
   </div>
@@ -84,19 +84,19 @@
   <div class="section-2">
     <div class="navbar">
       <nav>
-        <a class="special <%= page == 'index' ? 'on' : '' %>" href="/">
+        <a class="<%= page == 'index' ? 'on' : '' %>" href="/">
           <img src="/assets/icons/house.svg" alt="" />
           <span>خانه</span>
         </a>
-        <a class="special <%= page == 'products' ? 'on' : '' %>" href="/products">
+        <a class="<%= page == 'products' ? 'on' : '' %>" href="/products">
           <img src="/assets/icons/product.svg" alt="" />
           <span>محصولات</span>
         </a>
-        <a class="special <%= page == 'support' ? 'on' : '' %>" href="/support">
+        <a class="<%= page == 'support' ? 'on' : '' %>" href="/support">
           <img src="/assets/icons/support.svg" alt="" />
           <span>پشتیبانی</span>
         </a>
-        <a class="special <%= page == 'about-us' ? 'on' : '' %>" href="/about-us">
+        <a class="<%= page == 'about-us' ? 'on' : '' %>" href="/about-us">
           <img src="/assets/icons/about-us.svg" alt="" />
           <span>درباره ما</span>
         </a>
