--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,8 +13,8 @@
     <div class="main">
       <div class="box">
         <div class="brand">
-          <a class="special" href="/">
-            <img src="/assets/icons/brand.png" alt="">
+          <a href="/">
+            <img src="/assets/icons/brand.png" alt="" />
             <span class="vertical-line"></span>
             <h1>وبسایت فروشگاهی</h1>
           </a>
@@ -62,8 +62,8 @@
           </div>
           <button type="submit">ورود</button>
         </form>
-        <p>حساب ندارید؟ <a href="/auth/register">ساخت حساب</a>.</p>
-        <a href="/">صفحه اصلی</a>
+        <p>حساب ندارید؟ <a class="special" href="/auth/register">ساخت حساب</a>.</p>
+        <a class="special" href="/">صفحه اصلی</a>
       </div>
     </div>
     <script src="/libs/notyf/notyf.min.js"></script>
